Upgrade sbt to 1.6.2, add JDK17 tests (#295)
* Upgrade sbt to 1.6.2, add JDK17 tests

* Fix indent

* MaxPermSize JVM option has been removed in JDK17